Can save data and retrieve it from options page

--- a/plugin/options.html
+++ b/plugin/options.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Form Data</title>
+    <script src="jquery-3.7.1.min.js">
+
+    </script>
+    <script src="options.js">
+
+    </script>
 </head>
 <body>
     <h1>Form Data Entry</h1>
