--- a/plugin/options.html
+++ b/plugin/options.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Form Data Entry</h1>
-    <h3>Some text: <input type="text" id="example"> </h3>
+    <h3>First Name: <input type="text" id="legalNameSection_firstName"> </h3>
     <input type="submit" id="save" value="Save">
 </body>
 </html>
