--- a/plugin/index.html
+++ b/plugin/index.html
@@ -9,9 +9,10 @@
     </style>
   </head>
   <body>
-    <h1>Chrome extension demo</h1>
-    <h2>Let's fill out forms!</h2>
-    <p>Value To Pass to API: <input id="apivalue" type="text" name="value"></p>
+    <h1>Auto-application Filler</h1>
+    <h3>Choose the file containing personal information.</h3>
+    <h3>(Your data will never be stored)</h3>
+    <p>File location: <input type="file" id="file-selector" accept=".txt"></p>
     <button id='fillForm'>Fill form</button>
     <script src='action.js'></script>
   </body>
