--- a/plugin/options.html
+++ b/plugin/options.html
@@ -13,6 +13,10 @@
 <body>
     <h1>Form Data Entry</h1>
     <h3>First Name: <input type="text" id="firstName"> </h3>
+    <h3>Last Name: <input type="text" id="lastName"> </h3>
+    <h3>Address Line 1: <input type="text" id="address1"> </h3>
+    <h3>City: <input type="text" id="city"> </h3>
+
     <input type="submit" id="save" value="Save" class="save-file">
 </body>
 </html>
